Updated to use jspm and System.js
Speedy gulp reloads for dev

--- a/src/modules/app/app.scss
+++ b/src/modules/app/app.scss
@@ -1,7 +1,4 @@
-/**
- * App
- * @class app
- */
+// App
 
 @import '../list/list';
 
@@ -11,7 +8,7 @@
     line-height: 1.5em;
     margin: 0;
     padding: 20px;
-    
+
     h1,
     h2,
     h3,
@@ -21,7 +18,7 @@
         font-weight: normal;
         line-height: 1em;
     }
-    
+
     h1,
     h2,
     h3,
@@ -29,9 +26,9 @@
     h5,
     h6,
     p {
-        margin: 0 0 1rem 0;
+        margin: 0 0 1rem;
     }
-    
+
     h1 { font-size: 3.5em; }
     h2 { font-size: 3em; }
     h3 { font-size: 2.5em; }
