--- a/src/modules/all.css
+++ b/src/modules/all.css
@@ -1,13 +1,3 @@
-/**
- * App
- * @class app
- */
-
-/**
- * List
- * @class list
- */
-
 .list {
 	background-color: #fafafa;
 	border: 1px solid #eee;
@@ -39,7 +29,7 @@
 .app h5,
 .app h6,
 .app p {
-	margin: 0 0 1rem 0;
+	margin: 0 0 1rem;
 }
 
 .app h1 {
