--- a/src/modules/app/app.scss
+++ b/src/modules/app/app.scss
@@ -1,7 +1,11 @@
-// App
+////
+/// @group app
+/// @author kmturley
+////
 
 @import '../list/list';
 
+/// App class
 .app {
     font-family: sans-serif;
     font-size: 16px;
