--- a/src/modules/list/list.scss
+++ b/src/modules/list/list.scss
@@ -1,5 +1,9 @@
-// List
+////
+/// @group list
+/// @author kmturley
+////
 
+/// List class
 .list {
     background-color: #fafafa;
     border: 1px solid #eee;
