--- a/src/modules/all/type.scss
+++ b/src/modules/all/type.scss
@@ -16,7 +16,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: $color-grey;
+    color: $color-grey-dark;
     font-family: $font-family;
     font-weight: 300;
     line-height: $line-height-lg;
