--- a/src/modules/all/utils.scss
+++ b/src/modules/all/utils.scss
@@ -28,3 +28,26 @@
         box-shadow: 0 0 20px 0 rgba(0, 0, 0, .2);
     }
 }
+
+.debug {
+    background-image: linear-gradient(rgba(0,0,0,0.05) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(0,0,0,0.05) 1px, transparent 1px),
+    linear-gradient(rgba(0,0,0,0.05) 1px, transparent 1px),
+    linear-gradient(90deg, rgba(0,0,0,0.05) 1px, transparent 1px);
+    background-size: 8px 8px, 8px 8px, 16px 16px, 16px 16px;
+}
+
+.debug h1,
+.debug h2,
+.debug h3,
+.debug h4,
+.debug h5,
+.debug h6,
+.debug p {
+    background-color: rgba(255, 0, 0, 0.1);
+}
+
+.debug .col,
+.debug .panel {
+    background-color: rgba(0, 255, 255, 0.1);
+}
