--- a/src/components/all.css
+++ b/src/components/all.css
@@ -169,6 +169,25 @@ a,
 	box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2);
 }
 
+.material-icons {
+	direction: ltr;
+	display: inline-block;
+	font-family: 'Material Icons';
+	font-size: 24px;
+	font-style: normal;
+	font-weight: normal;
+	letter-spacing: normal;
+	line-height: 1;
+	text-transform: none;
+	white-space: nowrap;
+	word-wrap: normal;
+	-webkit-font-feature-settings: 'liga';
+	-webkit-font-smoothing: antialiased;
+	vertical-align: middle;
+	line-height: 0;
+	margin-top: -5px;
+}
+
 .debug {
 	background-image: linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px), linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px), linear-gradient(rgba(0, 0, 0, 0.05) 1px, transparent 1px), linear-gradient(90deg, rgba(0, 0, 0, 0.05) 1px, transparent 1px);
 	background-size: 8px 8px, 8px 8px, 16px 16px, 16px 16px;
