--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -9,104 +9,104 @@
     position: fixed;
     width: 100%;
     z-index: 3;
-}
+    
+    ul {
+        margin: 0;
+        padding: 0;
+        list-style: none;
+        overflow: hidden;
+        background-color: $color-white;
+    }
 
-.header ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
-    overflow: hidden;
-    background-color: #fff;
-}
+    li a {
+        border-right: 1px solid $color-grey-lighter;
+        display: block;
+        padding: 1em;
+        text-decoration: none;
+    }
 
-.header li a {
-    border-right: 1px solid $color-grey-lighter;
-    display: block;
-    padding: 1em;
-    text-decoration: none;
-}
+    li a:hover {
+        background-color: #f4f4f4;
+    }
 
-.header li a:hover {
-    background-color: #f4f4f4;
-}
+    .logo {
+        display: block;
+        float: left;
+        font-size: 1.5em;
+        font-weight: bold;
+        line-height: 2rem;
+        padding: .5rem 1rem;
+        text-decoration: none;
+    }
 
-.header .logo {
-    display: block;
-    float: left;
-    font-size: 1.5em;
-    font-weight: bold;
-    line-height: 2rem;
-    padding: .5rem 1rem;
-    text-decoration: none;
-}
+    .menu {
+        clear: both;
+        max-height: 0;
+        transition: max-height .2s ease-out;
+    }
 
-.header .menu {
-    clear: both;
-    max-height: 0;
-    transition: max-height .2s ease-out;
-}
+    .menu-icon {
+        cursor: pointer;
+        display: inline-block;
+        float: right;
+        padding: 1.5rem 1rem;
+        position: relative;
+        user-select: none;
+    }
 
-.header .menu-icon {
-    cursor: pointer;
-    display: inline-block;
-    float: right;
-    padding: 1.5rem 1rem;
-    position: relative;
-    user-select: none;
-}
+    .menu-icon .navicon {
+        background: #333;
+        display: block;
+        height: 2px;
+        position: relative;
+        transition: background .2s ease-out;
+        width: 18px;
+    }
 
-.header .menu-icon .navicon {
-    background: #333;
-    display: block;
-    height: 2px;
-    position: relative;
-    transition: background .2s ease-out;
-    width: 18px;
-}
+    .menu-icon .navicon:before,
+    .menu-icon .navicon:after {
+        background: #333;
+        content: '';
+        display: block;
+        height: 100%;
+        position: absolute;
+        transition: all .2s ease-out;
+        width: 100%;
+    }
 
-.header .menu-icon .navicon:before,
-.header .menu-icon .navicon:after {
-    background: #333;
-    content: '';
-    display: block;
-    height: 100%;
-    position: absolute;
-    transition: all .2s ease-out;
-    width: 100%;
-}
+    .menu-icon .navicon:before {
+        top: 5px;
+    }
 
-.header .menu-icon .navicon:before {
-    top: 5px;
-}
-
-.header .menu-icon .navicon:after {
-    top: -5px;
-}
+    .menu-icon .navicon:after {
+        top: -5px;
+    }
 
 
-.header .menu-btn {
-    display: none;
-}
+    .menu-btn {
+        display: none;
+    }
 
-.header .menu-btn:checked ~ .menu {
-    max-height: 240px;
-}
+    .menu-btn:checked ~ .menu {
+        max-height: 240px;
+    }
 
-.header .menu-btn:checked ~ .menu-icon .navicon {
-    background: transparent;
-}
+    .menu-btn:checked ~ .menu-icon .navicon {
+        background: transparent;
+    }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:before {
-    transform: rotate(-45deg);
-}
+    .menu-btn:checked ~ .menu-icon .navicon:before {
+        transform: rotate(-45deg);
+    }
 
-.header .menu-btn:checked ~ .menu-icon .navicon:after {
-    transform: rotate(45deg);
-}
+    .menu-btn:checked ~ .menu-icon .navicon:after {
+        transform: rotate(45deg);
+    }
 
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
-.header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
-    top: 0;
+    .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+    .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+        top: 0;
+    }
 }
 
 @media (min-width: 48em) {
